[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pymaic"
version = "0.2"
requires-python = ">=3.6"
dependencies = [
    "mock",
    "coverage",
    "numpy",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "oyaml"
]

[project.scripts]
maic = "maic.cli:run"

[tool.setuptools]
packages = ["maic", "maic.io", "maic.models", "maic.cli"]

[tool.setuptools.package-data]
"*" = ["*.pyi"]
"maic" = ["py.typed"]