[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pymaic"
version = "0.2.1"
requires-python = ">=3.6"
dependencies = [
    "mock",
    "coverage",
    "numpy",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "oyaml"
]
readme = "README.md"
license = { file = "LICENSE"}
authors = [
    {name = "Bo Wang", email = "bo.wang@roslin.ed.ac.uk" },
    {name = "Andy Law", email = "andy.law@roslin.ed.ac.uk"},
    {name = "JK Baillie", email = "j.k.baillie@ed.ac.uk"},
    {name = "D Farr"}
]
maintainers = [
    {name = "Jim McGrath", email = "jim.mcgrath@ed.ac.uk"}
]

[project.urls]
repository = "https://github.com/baillielab/maic/tree/packaging"

[project.scripts]
maic = "maic.cli:run"

[tool.setuptools]
packages = ["maic", "maic.io", "maic.models", "maic.cli"]

[tool.setuptools.package-data]
"*" = ["*.pyi"]
"maic" = ["py.typed"]