[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pymaic"
version = "0.2"
requires-python = ">=3.6"
dependencies = [
    "mock",
    "coverage",
    "numpy",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "oyaml"
]
readme = "README.md"
license = { file = "LICENSE"}
authors = [
    {name = "J Kenneth Baillie", email = "j.k.baillie@ed.ac.uk"},
    {name = "Andy Law", email = "andy.law@roslin.ed.ac.uk"},
    {name = "Bo Wang", email = "bo.wang@roslin.ed.ac.uk" },
    {name = "David Farr", email = "contact@baillielab.net"}
]
maintainers = [
    {name = "Jim McGrath", email = "jim.mcgrath@ed.ac.uk"}
]

[project.urls]
homepage = "https://baillielab.net/maic"
repository = "https://github.com/baillielab/maic"
pacckage_repo = "https://github.com/baillielab/maic/tree/packaging"

[project.scripts]
maic = "maic.cli:run"

[tool.setuptools]
packages = ["maic", "maic.io", "maic.models", "maic.cli"]

[tool.setuptools.package-data]
"*" = ["*.pyi"]
"maic" = ["py.typed"]